Testing for device get endpoints
