# devices/openapi.yaml
@@ -21,6 +21,31 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/Devices'
+    post:
+      operationId: views.post_device
+      summary: Add new device
+      responses:
+        201:
+          description: Device added successfully
+      requestBody:
+        content:
+          application/json:
+            schema:
+              x-body-name: device
+              $ref: '#/components/schemas/Devices'
+    put:
+      operationId: views.put_device
+      summary: Update or Create device
+      responses:
+        201:
+          description: Devices not present, creating
+      requestBody:
+        content:
+          application/json:
+            schema:
+              x-body-name: device
+              $ref: '#/components/schemas/Devices'
+
   /devices/{device_id}:
     get:
       operationId: views.get_device
@@ -50,31 +75,6 @@ paths:
                 $ref: '#/components/schemas/Devices'
         404:
           description: Device not found
-  /devices/:
-    post:
-      operationId: views.post_device
-      summary: Add new device
-      responses:
-        201:
-          description: Device added successfully
-      requestBody:
-        content:
-          application/json:
-            schema:
-              x-body-name: device
-              $ref: '#/components/schemas/Devices'
-    put:
-      operationId: views.put_device
-      summary: Update or Create device
-      responses:
-        201:
-          description: Devices not present, creating
-      requestBody:
-        content:
-          application/json:
-            schema:
-              x-body-name: device
-              $ref: '#/components/schemas/Devices'
 
 components:
   parameters:
